Fix: avatar on small devices

--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -158,6 +158,10 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .contactInfo svg {
+    height: 128px;
+  }
 }
 
 [data-theme='dark'] .input {
